test/fail/id/privatefields.java

class Test {
    
    void x() {
        int x = PrivateFields.x;
    }
}

class PrivateFields {
    private static int x;
}
